[package]
name = "rustc_attr_data_structures"
version = "0.0.0"
edition = "2021"

[dependencies]
# tidy-alphabetical-start
rustc_ast = {path = "../rustc_ast"}
rustc_abi = {path = "../rustc_abi"}
rustc_data_structures = {path = "../rustc_data_structures"}
rustc_serialize = {path = "../rustc_serialize"}
rustc_span = {path = "../rustc_span"}
rustc_macros = {path = "../rustc_macros"}
# tidy-alphabetical-end
